welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:30: error: ';' expected but 'else' found.
			  else {droite() ; avance(); droite() }
                          ^SnakeBuggle:40: error: Unmatched closing brace '}' ignored here
}
^